# exogress-java

./: .gitignore  Cargo.toml  build.rs  settings.gradle
.github/workflows/: main.yml
lib/: build.gradle
lib/src/main/java/com/exogress/: Instance.java  InstanceBuilder.java  InternalPointerMarker.java  JNIReachabilityFence.java  NativeUtils.java
lib/src/test/java/com/exogress/: InstanceTest.java
src/: java_glue.rs.in  jni_c_header.rs  lib.rs
